--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <nav>
+      <div class="navbar">
+        <a class="logo" href="index.html">Kami News.</a>
+        <div class="search-content">
+          <input type="text" placeholder="Search News....." id="search-input" />
+          <button id="search-button">Search</button>
+        </div>
+      </div>
+    </nav>
     <script src="main.js"></script>
   </body>
 </html>
