--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <nav>
-      <div class="navbar">
+      <div class="navbar object-width">
         <a class="logo" href="index.html">Kami News.</a>
         <div class="search-content">
           <input type="text" placeholder="Search News....." id="search-input" />
@@ -17,7 +17,7 @@
       </div>
     </nav>
 
-    <main id="blog-container">
+    <main class="object-width" id="blog-container">
       <div class="blog-card">
         <img src="https://placehold.co/600x400" alt="" />
         <h2>This is a Title</h2>
