--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kami News</title>
+    <title>Fate Dynamic News</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <nav>
       <div class="navbar object-width">
-        <a class="logo" href="index.html">Kami News.</a>
+        <a class="logo" href="index.html">FD News.</a>
         <div class="search-content">
           <input type="text" placeholder="Search News....." id="search-input" />
           <button id="search-button">Search</button>
