--- a/index.html
+++ b/index.html
@@ -64,6 +64,6 @@
         </p>
       </div>
     </main>
-    <script src="main.js"></script>
+    <script type="module" src="main.js"></script>
   </body>
 </html>
