--- a/index.html
+++ b/index.html
@@ -17,53 +17,7 @@
       </div>
     </nav>
 
-    <main class="object-width" id="blog-container">
-      <div class="blog-card">
-        <img src="https://placehold.co/600x400" alt="" />
-        <h2>This is a Title</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias harum
-          officia odio cupiditate reiciendis, explicabo facere excepturi!
-          Asperiores, unde repudiandae.
-        </p>
-      </div>
-      <div class="blog-card">
-        <img src="https://placehold.co/600x400" alt="" />
-        <h2>This is a Title</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias harum
-          officia odio cupiditate reiciendis, explicabo facere excepturi!
-          Asperiores, unde repudiandae.
-        </p>
-      </div>
-      <div class="blog-card">
-        <img src="https://placehold.co/600x400" alt="" />
-        <h2>This is a Title</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias harum
-          officia odio cupiditate reiciendis, explicabo facere excepturi!
-          Asperiores, unde repudiandae.
-        </p>
-      </div>
-      <div class="blog-card">
-        <img src="https://placehold.co/600x400" alt="" />
-        <h2>This is a Title</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias harum
-          officia odio cupiditate reiciendis, explicabo facere excepturi!
-          Asperiores, unde repudiandae.
-        </p>
-      </div>
-      <div class="blog-card">
-        <img src="https://placehold.co/600x400" alt="" />
-        <h2>This is a Title</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias harum
-          officia odio cupiditate reiciendis, explicabo facere excepturi!
-          Asperiores, unde repudiandae.
-        </p>
-      </div>
-    </main>
+    <main class="object-width" id="blog-container"></main>
     <script type="module" src="main.js"></script>
   </body>
 </html>
